# stupid_chat_bot

./: .gitattributes  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  activate_env.sh  alembic.ini  cleanup_env.sh  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup_local_env.sh  tasks.py
backend/alembic/: env.py
backend/alembic/versions/: 676dc7471bc4_initial_migration_create_chat_sessions_.py  add_user_id_to_chat_sessions.py  b2c3d4e5f6a7_add_users_and_user_sessions_tables.py  c3d4e5f6a7b8_add_email_verification_tokens_table.py  d4e5f6a7b8c9_add_report_schedule_and_user_opt_in.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/api/: __init__.py  admin.py  auth.py  history.py  sessions.py  websocket.py
backend/app/cli/: __init__.py  admin_report.py  delete_user.py  make_admin.py  stats.py
backend/app/models/: __init__.py  base.py  email_verification.py  message.py  report_schedule.py  session.py  user.py  user_session.py
backend/app/repositories/: __init__.py  base.py  message.py  session.py  stats.py
backend/app/schemas/: __init__.py  message_limits.py  user.py
backend/app/services/: __init__.py  admin_report_service.py  ai_service.py  auth_service.py  chat_service.py  email_service.py  jwt_service.py  message_limits.py  oauth_service.py  password_service.py  scheduler_service.py  verification_service.py
backend/tests/: __init__.py  conftest.py
backend/tests/repositories/: test_stats.py
docs/: AUTOMATED_DEPLOYMENT.md  PLAN_DEPLOYMENT.md  README.md  admin-dashboard.md  cli-commands.md  email-verification.md  (+8 more)
(+59 files in other folders)
