[project]
name = "stupid-chat-bot-backend"
version = "0.1.0"
description = "Backend for Stupid Chat Bot"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.1",
    "pydantic>=2.10.3",
    "pydantic-settings>=2.6.1",
    "python-dotenv>=1.0.1",
    "websockets>=14.1",
    "litellm>=1.80.5",
    # Database (Phase 5)
    "sqlalchemy[asyncio]>=2.0.23",
    "aiosqlite>=0.19.0",
    "alembic>=1.13.0",
    # Authentication (Issue #56)
    "email-validator>=2.0.0",
]

[project.optional-dependencies]
# Local development tools - for fast linting, formatting, and task automation
dev-local = [
    "black==24.10.0",
    "ruff==0.8.4",
    "pre-commit==4.0.1",
    "invoke>=2.2.0",
]

# Test tools - heavy dependencies for running tests
dev-test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]

# Complete dev environment (backwards compatibility)
dev = [
    "black==24.10.0",
    "ruff==0.8.4",
    "pre-commit==4.0.1",
    "invoke>=2.2.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
